chore: add `yargs`

--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "sht9-paliscript",
   "version": "1.0.0",
   "description": "Holy Library",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maiaowmorseesom/sht9-paliscript.git"
@@ -15,8 +11,7 @@
   ],
   "author": "maiaowmorseesom",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/maiaowmorseesom/sht9-paliscript/issues"
-  },
-  "homepage": "https://github.com/maiaowmorseesom/sht9-paliscript#readme"
+  "bin": {
+    "paliscript": "./index.js"
+  }
 }
