--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sht9-paliscript",
   "version": "1.0.0",
   "description": "Holy Library",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maiaowmorseesom/sht9-paliscript.git"
