chore: make `frontend-svelte` as workspace

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "sht9-paliscript",
-  "workspaces": ["frontend-svelte"],
+  "workspaces": [
+    "frontend-svelte"
+  ],
   "version": "1.0.0",
   "description": "Holy Library",
   "repository": {
