--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postinstall": "node install.js"
   },
   "dependencies": {
+    "@maiaowmorseesom/sht9-paliscript": "^1.0.0",
     "dotenv": "^17.2.1",
     "open": "^10.2.0"
   }
